Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2021-07-01 14:29:45 -0600
  - Added Changes file for future changes
  - New maintainer

0.04_001       2014-10-08
  - Removed retroactively experimental Perl features
    to avoid warnings (rt#100798)