@@ -21,7 +21,9 @@ File::Path  = 2.07
 [RemovePrereqs]
 remove = strict
 remove = warnings
+remove = if
 remove = Carp
+remove = Data::Dumper
 
 [Author::Plicease::Upload]
 cpan = 1
