@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dependency on File::HomeDir (gh#7)
+  - Fix tests on Windows (gh#7)
 
 0.05      2021-07-01 14:29:45 -0600
   - Added Changes file for future changes
